2007-08-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-ucs.

2007-07-29  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-base.

2007-07-24  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mule-base.

2007-07-11  Norbert Koch  <viteno@xemacs.org>

	* Packages released: calendar.

2007-06-30  Norbert Koch  <viteno@xemacs.org>

	* Packages released: text-modes.

2007-06-27  Norbert Koch  <viteno@xemacs.org>

	* Packages released: hyperbole.

2007-06-22  Norbert Koch  <viteno@xemacs.org>

	* Packages released: net-utils oo-browser.

2007-06-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: viper.

2007-06-13  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff viper.

2007-06-11  Norbert Koch  <viteno@xemacs.org>

	* Packages released: perl-modes prog-modes psgml tramp.

2007-05-22  Jerry James  <james@xemacs.org>

	* .cvsignore: Ignore macro.suppress as well as macro.list.
	* find-macro-err.awk: Don't report names found in macro.suppress.
	Also, update the FSF's address.

	* Local.rules.inc:
	* Makefile:
	* Version.rules:
	* XEmacs.rules:
	* gen-macro-list.awk:
	* hack-package-index.el:
	* iterate-1.rules:
	* iterate.rules:
	* meta-iterate.rules:
	* meta-targets.rules:
	* package-clean.el:
	* package-compile.el:
	* package-net-packages.el: Update the FSF's address.

2007-05-22  Norbert Koch  <viteno@xemacs.org>

	* Packages released: auctex.

	* Packages released: mule-base python-modes xemacs-base.

2007-05-21  Norbert Koch  <viteno@xemacs.org>

	* Packages released: locale.

2007-05-20  Norbert Koch  <viteno@xemacs.org>

	* Packages released: leim.

2007-05-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: eshell.

2007-05-13  Norbert Koch  <viteno@xemacs.org>

	* Packages released: general-docs.

2007-05-12  Norbert Koch  <viteno@xemacs.org>

	* Packages released: locale.

2007-05-09  Norbert Koch  <viteno@xemacs.org>

	* Packages released: prog-modes.

	* Packages released: prog-modes.
