@@ -1,3 +1,9 @@
+2007-08-14  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* package-compile.el (depth):
+	Add mule-lisp-directory to the load-path when it is non-nil. Fixes
+	problems with CCL not being picked up on a 21.5 non-Mule build.
+
 2007-08-14  Norbert Koch  <viteno@xemacs.org>
 
 	* Packages released: mule-ucs.
